<resources>
    <string name="app_name">WECO</string>
    <string name="m2_parse_error_msg">Failed to parse data</string>
    <string name="m3_bad_network_msg">Internet problem</string>
    <string name="m4_connect_error_msg">Connection error</string>
    <string name="m5_connect_timeout_msg">Connection time out</string>
    <string name="m6_other_msg">Unknown mistake</string>
    <string name="m1_login">Login</string>
    <string name="m2_register">Register</string>
    <string name="m3_catch_every_sunbeam">—  Catch Every Sunbeam  —</string>
    <string name="m4_auto">Auto</string>
    <string name="m5_email_address">Email Address</string>
    <string name="m6_remember_me">Remember me</string>
    <string name="m7_username_cant_empty">The Username cannot be empty</string>
    <string name="m8_password_cant_empty">The password cannot be empty</string>
    <string name="m9_save">Save</string>
    <string name="m10_sms_retrieval">SMS retrieval</string>
    <string name="m11_app_want_to_visit_format">%s wants to access your %s</string>
    <string name="m12_to_app_set_permission_format">You have not allowed %s to get your %s permission, you can enable it in the app settings</string>
    <string name="m13_password_characters">The password is 6-30 characters, a combination
of letters, numbers and symbols.</string>
    <string name="m14_seach">Search</string>
    <string name="m15_installer_code_not_empty">Installer ID cannot be empty</string>
    <string name="m16_home">Home</string>
    <string name="m17_energy">Energy</string>
    <string name="m18_array">Array</string>
    <string name="m19_station">Station</string>
    <string name="m20_manu">Manu</string>
    <string name="m21_message">Message</string>
    <string name="m22_About">About</string>
    <string name="m23_log_out">Log Out</string>
    <string name="m24_personal_avatar">Personal Avatar</string>
    <string name="m25_save">Save</string>
    <string name="m26_old_password">Old Password</string>
    <string name="m27_new_password">New password</string>
    <string name="m28_password_cant_empty">Password can not be blank</string>
    <string name="m29_passwords_are_inconsistent">The two passwords do not match</string>
    <string name="m30_password_cannot_be_less_than_6_digits">Password cannot be less than 6 digits</string>
    <string name="m31_passwords_are_inconsistent">The two passwords do not match</string>
    <string name="m32_load">Load</string>
    <string name="m33_bat">Bat</string>
    <string name="m34_plant">Plant</string>
    <string name="m35_please_input_plant_or_sn">Please enter the power station name or the serial number in the power station equipment</string>
    <string name="m36_all">All</string>
    <string name="m37_online">Online</string>
    <string name="m38_offline">Offline</string>
    <string name="m39_trouble">Fault</string>
    <string name="m40_all_format">All(%d)</string>
    <string name="m41_online_format">Online(%d)</string>
    <string name="m42_offline_format">Offline(%d)</string>
    <string name="m43_trouble_format">Fault(%d)</string>
    <string name="m44_add_plant">Add a power station</string>
    <string name="m45_current_power">Real time power</string>
    <string name="m46_please_select_install_date">Please select an install date</string>
    <string name="m47_please_input_total_component_power">Please enter the total power of the components</string>
    <string name="m48_kwh">kWh</string>
    <string name="m49_mwh">MWh</string>
    <string name="m50_kwp">kWp</string>
    <string name="m51_mwp">MWp</string>
    <string name="m52_kw">kW</string>
    <string name="m53_mw">MW</string>
    <string name="m54_hz">Hz</string>
    <string name="m55_kva">KVA</string>
    <string name="m56_kvar">KVar</string>
    <string name="m57_v">V</string>
    <string name="m58_a">A</string>
    <string name="m59_kg">kg</string>
    <string name="m60_t">t</string>
    <string name="m61_power_output">power/energy</string>
    <string name="m62_soc">SOC</string>
    <string name="m63_charge_discharge_output">Discharge</string>
    <string name="m64_wind_direction_format">wind direction:%s</string>
    <string name="m65_wind_speed_format">wind speed:%s</string>
    <string name="m66_info_space_not_permission">Browsing account does not have permission</string>
    <string name="m67_next_step">Next step</string>
    <string name="m68_plant_name">Station name</string>
    <string name="m69_please_select_country_or_area_2">Please select a country</string>
    <string name="m70_please_input_plant_name">Please fill in the power station name</string>
    <string name="m71_install_date">installation date</string>
    <string name="m72_plant_address">Power station address</string>
    <string name="m73_unselected_country_or_area">No country selected</string>
    <string name="m74_take_a_picture">Photograph</string>
    <string name="m75_from_the_album">choose from photo album</string>
    <string name="m76_device_count">Equipment Quantity</string>
    <string name="m77_total_component_power">Total power of components</string>
    <string name="m78_today_generate_electricity">Power Generation Today</string>
    <string name="m79_month_generate_electricity">Power generation in the current month</string>
    <string name="m80_total_generate_electricity">Cumulative power generation</string>
    <string name="m81_nothing_plant_format">No %s station</string>
    <string name="m82_system_nomal">System Nomal</string>
    <string name="m83_system_exception">System Exception</string>
    <string name="m84_net_use">Net Use</string>
    <string name="m85_impact">impact</string>
    <string name="m86_co2">co2</string>
    <string name="m87_coal">coal</string>
    <string name="m88_Deforestation">Deforestation</string>
    <string name="m89_total">Total</string>
    <string name="m90_serial_number_not_null">SN cannot be blank</string>
    <string name="m91_check_code_not_null">Verification code cannot be blank</string>
    <string name="m92_add_data_logger">Add data logger</string>
    <string name="m93_input_data_logger_sn_and_check_code">Enter the device serial number and verthcation code</string>
    <string name="m94_serial_number">SN</string>
    <string name="m95_check_code">Verification</string>
    <string name="m96_please_input_data_logger_sn">Please enter SN of data logger</string>
    <string name="m97_please_input_data_logger_check_code">Please enter verification of data logger</string>
    <string name="m98_connect">Connect…</string>
    <string name="m99_configure_the_device">Configure the device to the networl</string>
    <string name="m100_please_select_wifi">Please Select 2.4G wifi</string>
    <string name="m101_cancel">Cancel</string>
    <string name="m102_comfir">Comfir</string>
    <string name="m103_turn_on_gps">turn on gps</string>
    <string name="m104_gps_to_getwifi">To get the wifi list, you need to turn on gps</string>
    <string name="m105_pv_station_pic">PV Station Picture</string>
    <string name="m106_load_pic">Upload Picture</string>
    <string name="m107_station_type">Station Type</string>
    <string name="m108_select_station_type">Select the Station Type</string>
    <string name="m109_station_name">Station name</string>
    <string name="m110_installtion_date">Select the installtion date</string>
    <string name="m111_station_address">Station Address</string>
    <string name="m112_found_revenge">Found Revenge</string>
    <string name="m113_pv">PV</string>
    <string name="m114_storage">Storage</string>
    <string name="m115_enter_the_plant_addr">Enter the plant address</string>
    <string name="m116_please_select_city">Please select city</string>
    <string name="m117_please_select_symbol">Please select a currency symbol</string>
    <string name="m118_please_plant_type">Please select the power station type</string>
    <string name="m119_please_plant_address">Please enter the address of the power station</string>
    <string name="m120_crop_image_menu_crop">cut out</string>
    <string name="m121_pick_image_intent_chooser_title">Select Image</string>
    <string name="m122_today">Today</string>
    <string name="m123_Total">Total</string>
    <string name="m124_on_line">On-Line</string>
    <string name="m125_off_line">Off-Line</string>
    <string name="m126_w">w</string>
    <string name="m127_device_list">Device List</string>
    <string name="m128_generated_today">%s  Generated Today</string>
    <string name="m129_self_power_today">%s Self-Power Today</string>
    <string name="m130_plant_management">Plant Management</string>
    <string name="m131_logout">Log out of current account?</string>
    <string name="m132_local_debugging">Local Debugging</string>
    <string name="m133_suggest">Suggest</string>
    <string name="m134_notifi_enable">Enable or disable information notification</string>
    <string name="m135_manual">Manual</string>
    <string name="m136_clear">Clear</string>
    <string name="m137_update">Update</string>
    <string name="m138_security_notice">Security Notice</string>
    <string name="m139_language">Language</string>
    <string name="m140_about">About</string>
    <string name="m141_security_center">Security Center</string>
    <string name="m142_logout_account">Logout Account</string>
    <string name="m143_logout_account_notice">Logout Account Notice</string>
    <string name="m144_down_my_data">Download My Data</string>
    <string name="m145_energy_value">Energy Value</string>
    <string name="m146_estimated_value">Estimated Value/Saved</string>
    <string name="m147_solar_offset">Solar Offset</string>
    <string name="m148_this_year">This Year</string>
    <string name="m149_this_month">This Month</string>
    <string name="m150_this_day">This Day</string>
    <string name="m151_energy_offset">Energy Offset</string>
    <string name="m152_scan_pictrue">Scan pictrue</string>
    <string name="m153_manual_input">Manual Input</string>
    <string name="m154_low">Low</string>
    <string name="m155_avg">Avg</string>
    <string name="m156_high">High</string>
    <string name="m157_hps">HPS</string>
    <string name="m158_xp">XP</string>
    <string name="m159_hvbox">HVBOX</string>
    <string name="m160_device_are_run">%s  Device are run</string>
    <string name="m161_no_data">No data</string>
    <string name="m162_mgrn_inverter">mgrn inverter</string>
    <string name="m163_battery_model">Battery Model</string>
    <string name="m164_battery_sn">Battery SN</string>
    <string name="m165_battery_id">Battery ID</string>
    <string name="m166_bms_type">BMS Type</string>
    <string name="m167_fw_version_1">FW Version 1</string>
    <string name="m168_actual_protocol">Actual Protocol</string>
    <string name="m169_fw_version_1">Total Voltage</string>
    <string name="m170_current">Current</string>
    <string name="m171_discharge_power">Discharge Power</string>
    <string name="m172_battery_soc">Battery SOC</string>
    <string name="m173_max_volt">Max Volt</string>
    <string name="m174_min_volt">Min Volt</string>
    <string name="m175_max_tem">Max Tem</string>
    <string name="m176_min_tem">Min Tem</string>
    <string name="m6_cancel">取消</string>
    <string name="m7_confirm">确定</string>
    <string name="m3_forget_password">Forget password</string>
    <string name="m10_accept_policy">Accept terms and data privacy policy</string>
    <string name="m38_setting">Setting</string>
    <string name="m77_password">Password</string>
    <string name="m79_country">Country</string>
    <string name="m80_time_zone">Time Zone</string>
    <string name="m152_new_password_again">Enter the new password again</string>
    <string name="m153_email">Email</string>
    <string name="m158_send_verify_code">Send verify code</string>
    <string name="m186_installer_code">Installer Code</string>
    <string name="m240_bluetooth_connection_failed">Bluetooth connection failed,please scan the code again to add</string>
</resources>