<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.station.fragment.PlantTabFragment">

    <com.olp.weco.view.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/color_white"
        android:orientation="horizontal">

        <com.olp.weco.view.Tab
            android:id="@+id/tab_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tabText="@string/m36_all" />

        <com.olp.weco.view.Tab
            android:id="@+id/tab_online"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tabText="@string/m37_online" />

        <com.olp.weco.view.Tab
            android:id="@+id/tab_offline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tabText="@string/m38_offline" />

        <com.olp.weco.view.Tab
            android:id="@+id/tab_trouble"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tabText="@string/m39_trouble" />

    </com.olp.weco.view.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_plant"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
