<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.manu.activity.SettingActivity">

    <com.olp.lib.view.StatusBarWhiteHeightView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_app_main" />

    <com.olp.weco.view.TitleBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showLeftBackIcon="false"
        app:titleText="@string/m141_security_center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:divider="@drawable/line_divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <com.olp.weco.view.SettingItemView
            android:id="@+id/item_clear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/m142_logout_account"
            app:showRightIcon="true"
            app:showSubName="true"
            app:textSubNameColor="@color/text_gray_bb" />

        <com.olp.weco.view.SettingItemView
            android:id="@+id/item_update"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:itemName="@string/m143_logout_account_notice"
            app:showSubName="true" />


    </LinearLayout>


</LinearLayout>
