<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bottom_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    tools:context=".view.dialog.BottomDialog">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/warning" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_10"
        android:text="@string/m240_bluetooth_connection_failed"
        android:textColor="@color/black_999999"
        android:textSize="@dimen/size_content_sp_14" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/button_gray_background"
            android:gravity="center"
            android:text="@string/m7_confirm"
            android:textColor="@color/text_gray" />

        <Button
            android:id="@+id/bt_comfirm"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_30"
            android:background="@drawable/shape_login"
            android:gravity="center"
            android:text="@string/m6_cancel"
            android:textColor="@color/text_white" />


    </LinearLayout>


</LinearLayout>
